--- a/cmd/simple/index.html
+++ b/cmd/simple/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-  <title>Shortner</title>
-  <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <title>Shortner</title>  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="/static/output.css" rel="stylesheet">
 </head>
 
 <body>
